Changed header to be a h1

--- a/マネーツリー利用規約.md
+++ b/マネーツリー利用規約.md
@@ -1,4 +1,4 @@
-##マネーツリー利用規約
+#マネーツリー利用規約
 
 マネーツリー株式会社（以下「Moneytree」）が提供しているサービス（以下「本サービス」）とは、 有料及び無料サービスを利用する個人（以下「お客さま」）を対象として、お客さまが金融機関などのウェブサイト上で閲覧できる口座残高などの情報（以下「口座情報」）を一覧表示する、データアグリゲーション・サービスのことをいいます。この利用規約（以下「本規約」）は、本サービスの利用に関する条件を、お客さまとMoneytreeとの間で定めるものです。
 
