--- a/マネーツリー利用規約.md
+++ b/マネーツリー利用規約.md
@@ -7,8 +7,8 @@
 1.  「データプロバイダー」とは、お客さまが本サービスを利用してお客さまご自身の口座情報などを取得できる、金融機関などが運営するインターネットサービスのサイトのことをいいます。
 2.  「データアグリゲーション」 とは、お客さまがMoneytreeを経由して各データプロバイダーにアクセスし、ご自身の口座情報を取得するサービスをいいます。
 3.  「認証情報」 とは、データプロバイダーにログインする時に必要とされるログイン名とパスワードなどのことをいいます。
-4.  「Moneytreeのウェブサイト」とは、 [www.moneytree.jp](http://www.moneytree.jp/) のことをいいます。
-5.  「MoneytreeのTwitterアカウント」とは、[@moneytreejp](http://www.twitter.com/moneytreejp) のことをいいます。
+4.  「Moneytreeのウェブサイト」とは、 [www.moneytree.jp](https://www.moneytree.jp/) のことをいいます。
+5.  「MoneytreeのTwitterアカウント」とは、[@moneytreejp](https://www.twitter.com/moneytreejp) のことをいいます。
 6.  「有料サービス」とは、Moneytreeが提供するサービスにおいて、基本的な機能に加え特別な機能を利用できる有料のサービスのことをいいます。
 
 ## 第2条 契約の成立
